--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\core\SurfaceWorld.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="resources\animations\animation.json" />
@@ -128,6 +131,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\procedural\chunks\BoxChunk.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\SurfaceWorld.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
