--- a/protegon/protegon.vcxproj.filters
+++ b/protegon/protegon.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="src\Engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Test.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
