Improve template makefile and fix package addition

--- a/test_app/CMakeLists.txt
+++ b/test_app/CMakeLists.txt
@@ -1,12 +1,22 @@
+cmake_minimum_required(VERSION 3.12)
 project(test_app)
+
+# Set C++ language requirement.
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# Add include directories to project.
 
 include_directories(
     "${CMAKE_CURRENT_SOURCE_DIR}/src"
 )
 
-# Create executable from all source files.
+# Find all cpp files in the src directory of the project.
 
 file(GLOB_RECURSE FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+
+# Create executable from all source files.
 
 add_executable(
     ${PROJECT_NAME}
