--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.20)
 add_subdirectory(event)
 add_subdirectory(state)
 add_subdirectory(animation)
+add_subdirectory(scene)
