Move GMTK Jam game to demos folder

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(event)
 add_subdirectory(state)
 add_subdirectory(animation)
 add_subdirectory(scene)
+add_subdirectory(gmtk_jam_2022)
