--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -5,3 +5,6 @@ add_subdirectory(state)
 add_subdirectory(animation)
 add_subdirectory(scene)
 add_subdirectory(gmtk_jam_2022)
+add_subdirectory(overlap_collision)
+add_subdirectory(fixed_collision)
+add_subdirectory(dynamic_collision)
