--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(event)
 add_subdirectory(state)
 add_subdirectory(animation)
 add_subdirectory(scene)
+add_subdirectory(vector)
 add_subdirectory(gmtk_jam_2022)
 add_subdirectory(overlap_collision)
 add_subdirectory(fixed_collision)
