Rename fixed collisions to static/intersect

--- a/demos/static_collision/CMakeLists.txt
+++ b/demos/static_collision/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(fixed_collision)
+project(static_collision)
 
 set(TEST_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
