--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -7,5 +7,5 @@ add_subdirectory(scene)
 add_subdirectory(vector)
 add_subdirectory(gmtk_jam_2022)
 add_subdirectory(overlap_collision)
-add_subdirectory(fixed_collision)
+add_subdirectory(static_collision)
 add_subdirectory(dynamic_collision)
