--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.20)
 
-add_subdirectory(event)
-add_subdirectory(state)
 add_subdirectory(animation)
-add_subdirectory(scene)
-add_subdirectory(vector)
+add_subdirectory(dynamic_collision)
+add_subdirectory(ecs)
+add_subdirectory(event)
 add_subdirectory(gmtk_jam_2022)
 add_subdirectory(overlap_collision)
+add_subdirectory(scene)
+add_subdirectory(state)
 add_subdirectory(static_collision)
-add_subdirectory(dynamic_collision)
+add_subdirectory(vector)
