--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(dynamic_collision)
 add_subdirectory(ecs)
 add_subdirectory(event)
 add_subdirectory(gmtk_jam_2022)
+add_subdirectory(olc_jam_2022)
 add_subdirectory(overlap_collision)
 add_subdirectory(scene)
 add_subdirectory(state)
