--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-# Vendor files
+# Vendor / external files
 [Vv]endor/
+[Ee]xternal/
 
 # User-specific files
 *.rsuser
