--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ecs"]
-	path = external/ecs
+[submodule "modules/ecs"]
+	path = modules/ecs
 	url = https://github.com/martinstarkov/ecs.git
