--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # Vendor / external files
 [Vv]endor/
 [Ee]xternal/
+[Ee]xtern/
 
 # User-specific files
 *.rsuser
@@ -34,6 +35,7 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+[Ii]nstall/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
