--- a/tests/protegon/CMakeLists.txt
+++ b/tests/protegon/CMakeLists.txt
@@ -17,6 +17,5 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${TEST_SRC_DIR}
 add_protegon_to(${PROJECT_NAME})
 
 IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/resources/")
-    create_protegon_link("resources")
-    #file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/resources/" DESTINATION "${PROJECT_BINARY_DIR}/resources")
+    create_resource_symlink(${PROJECT_NAME} "resources")
 ENDIF()
